[gd_scene load_steps=10 format=3 uid="uid://dax2x8onk7n16"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_406lb"]
[ext_resource type="Texture2D" uid="uid://bwr7upym8yf3s" path="res://kenney_micro-roguelike/Tiles/Monochrome/tile_0004.png" id="1_s8q7j"]
[ext_resource type="PackedScene" uid="uid://djnykbyn3hpbi" path="res://scene/anchor_camera_2d.tscn" id="2_5x2bm"]
[ext_resource type="PackedScene" uid="uid://bbwjrdk3jdfry" path="res://scene/anchor_detector_2d.tscn" id="3_ucnoc"]
[ext_resource type="Script" path="res://scripts/Hurtbox.gd" id="3_y64kw"]
[ext_resource type="PackedScene" uid="uid://mu25lk7y00mv" path="res://scene/health_component.tscn" id="4_q6ny3"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8bn8g"]
size = Vector2(6, 6)

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_87raf"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ofb1s"]
size = Vector2(8, 8)

[node name="Player" type="CharacterBody2D" groups=["player"]]
script = ExtResource("1_406lb")

[node name="AnchorCamera2D" parent="." instance=ExtResource("2_5x2bm")]

[node name="TimerLabel" type="Label" parent="AnchorCamera2D"]
offset_left = -20.0
offset_top = -106.0
offset_right = 20.0
offset_bottom = -80.0
text = "Test"

[node name="RichTextLabel" type="RichTextLabel" parent="AnchorCamera2D"]
offset_left = -274.0
offset_top = -43.0
offset_right = 256.0
offset_bottom = 40.0
bbcode_enabled = true
text = "[center][shake rate=70 level=20][color=red][b][font_size=60]GAME OVER[/font_size][/b][center]"
fit_content = true
scroll_following = true

[node name="AnchorDetector2D" parent="." instance=ExtResource("3_ucnoc")]

[node name="PlayerShape" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_8bn8g")

[node name="PlayerSprite" type="Sprite2D" parent="."]
material = SubResource("CanvasItemMaterial_87raf")
texture = ExtResource("1_s8q7j")

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
script = ExtResource("3_y64kw")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
shape = SubResource("RectangleShape2D_ofb1s")

[node name="HealthComponent" parent="." instance=ExtResource("4_q6ny3")]

[node name="CenterMarkerKey" type="Marker2D" parent="."]

[node name="SwordMarkerKey" type="Marker2D" parent="CenterMarkerKey"]
position = Vector2(4, 0)

[node name="CenterMarkerMouse" type="Marker2D" parent="."]

[node name="SwordMarkerMouse" type="Marker2D" parent="CenterMarkerMouse"]
position = Vector2(4, 0)

[node name="DeathTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="anchor_detached" from="AnchorDetector2D" to="AnchorCamera2D" method="_on_AnchorDetector2D_anchor_detached"]
[connection signal="anchor_detected" from="AnchorDetector2D" to="AnchorCamera2D" method="_on_AnchorDetector2D_anchor_detected"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_hurtbox_area_entered"]
[connection signal="body_entered" from="Hurtbox" to="." method="_on_hurtbox_body_entered"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_timer_timeout"]
